# presidio-nl-v2

./: -n openanonymiser  .Dockerfile.swp  .Dockerfile_LOCAL_7919.swp  .Dockerfile_LOCAL_8171.swp  .Dockerfile_REMOTE_7919.swp  .Dockerfile_REMOTE_8171.swp  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile_BACKUP_8171  Dockerfile_LOCAL_8171  PROJECT_OVERVIEW.md  README.md  STAGING_DEPLOYMENT_GUIDE.md  TEST_SCRIPTS.md  TODO.md  api.py  docker-compose.yaml  docker-compose.yml  e v1.2.0 - String endpoints with optimized Docker build  k8s-manifests.yaml  presidio_nl_cli.py  pyproject.toml  run_tests.py  setup.py  test_endpoints.py  test_endpoints.sh  test_iban.py  test_results.json
.ci/: trigger.txt
argocd/: application-cross-cluster.yaml  application-presidio-nl-v2-simple.yaml  application-presidio-nl-v2.yaml  application-simple.yaml  production-app.yaml  staging-app.yaml
docs/: DEPLOYMENT.md  ERD.md  ERD_EN.md  TEST_SCRIPTS.md  TEST_SCRIPTS_EN.md  TODO.txt  api-examples.md  api.md  architectuur.md  docker.md  lessons_learned.md  migratieplan.md  uitbreiden.md  use-cases.md
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
presidio_nl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: flair_ner_dutch.py  healthcheck.py  hidden_pdf_metadata.py  nepbrief.md  precommit.sh  test_iban.py
tests/: README.md  test_analyze_from_pdf.py  test_documents.py  test_engine.py  test_minimal_api.py  test_string_endpoints.py  (+2 more)
(+102 files in other folders)
